# 42_scop

./: .gitignore  Cargo.toml  Makefile  README.md
resources/models/: 10200_Pineapple_v1-L2.mtl  42.mtl  pineapple.mtl
resources/objects/: elephant.obj:Zone.Identifier
resources/objects/planet/: planet.mtl
resources/shaders/: model.fs
src/: camera.rs  common.rs  lib.rs  macros.rs  main.rs  math.rs  mesh.rs  model.rs  my_bmp_loader.rs  obj_loader.rs  rng.rs  shader.rs
src/_3_model_loading/: _2_model_loading_42.rs  mod.rs
src/_3_model_loading/shaders/: 1.model_loading_42.fs
src/app/: cli.rs  error.rs  mod.rs
src/bmp_loader/: consts.rs  decoder.rs  mini_bmp_module.rs  mod.rs
src/loaders/bmp/: decoder.rs  image.rs  mod.rs
src/model_loading/: mod.rs  model_loading_42.rs
src/renderer/: input_events.rs  mesh_gpu.rs  mod.rs  runtime.rs  shader_program.rs  texture_gpu.rs
src/scene/: bounds.rs  coloring.rs  mod.rs  model.rs  model_builder.rs
src/shaders/: model_loading_42.fs  model_loading_42.vs
