[package]
name = "scop_42"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
glfw = { version = "0.60.0", default-features = false, features = ["prebuilt-libs", "raw-window-handle-v0-6", "wayland", "x11"] }

[profile.release]
opt-level = 1
lto = true
